# qwen-image-master

./: README.md  pyproject.toml
difypkg/: qwen-image-master-0.0.1.difypkg  qwen-image-master-0.0.2.difypkg  qwen-image-master-0.0.3.difypkg  qwen-image-master-0.0.4.difypkg
qwen-image-master/: .difyignore  README.md  manifest.yaml  requirements.txt
qwen-image-master/.github/workflows/: plugin-publish.yml
qwen-image-master/provider/: qwen-image-master.py  qwen-image-master.yaml
qwen-image-master/tools/: prompts.py  qwen-image-lazy.py  qwen-image-lazy.yaml  qwen-image-master.py  qwen-image-master.yaml  tool_client.py
